--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,8 @@
+exclude: |
+  (?x)(
+      src/ansys/aedt/toolkits/common/ui/utils/ui_templates
+  )
+
 repos:
 
 - repo: https://github.com/psf/black
