--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
+#  Usually these files are written by a python script from a motor
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
@@ -75,7 +75,6 @@ instance/
 
 # Sphinx documentation
 doc/_build/
-_autosummary
 
 # PyBuilder
 .pybuilder/
@@ -153,8 +152,10 @@ cython_debug/
 # vscode
 .vscode
 
+batch.log
+
 # PyCharm
-#  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
+#  JetBrains specific motor is maintainted in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
@@ -163,3 +164,4 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 .idea/
+.venv/
