--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,18 @@
 exclude: |
-  (?x)(
-      src/ansys/aedt/toolkits/common/ui/utils/ui_templates
-  )
+    (?x)(
+        src/ansys/aedt/toolkits/common/ui/ui_templates/.* |
+        tests/input_data/.* |
+        examples/input_files/.*
+    )
 
 repos:
 
 - repo: https://github.com/psf/black
-  rev: 23.10.1  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
+  rev: 23.11.0  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
   hooks:
   - id: black
     args:
       - --line-length=120
-
-- repo: https://github.com/asottile/blacken-docs
-  rev: 1.16.0
-  hooks:
-  -   id: blacken-docs
-      additional_dependencies: [black==23.10.1]
 
 - repo: https://github.com/pycqa/isort
   rev: 5.12.0
@@ -26,14 +22,32 @@ repos:
       args: ['--force-single-line-imports', '--profile', 'black']
 
 - repo: https://github.com/PyCQA/flake8
-  rev: 6.1.0
+  rev: 6.0.0
   hooks:
   - id: flake8
     args:
       - --max-line-length=120
 
 - repo: https://github.com/codespell-project/codespell
-  rev: v2.2.6
+  rev: v2.2.2
   hooks:
   - id: codespell
-    args: ["--ignore-words=doc/styles/Vocab/ANSYS/accept.txt"]
+    args: ["--ignore-words=ignore_words.txt"]
+
+# - repo: https://github.com/python-jsonschema/check-jsonschema
+#   rev: 0.21.0
+#   hooks:
+#     - id: check-github-workflows
+
+# - repo: https://github.com/pycqa/pydocstyle
+#   rev: 6.1.1
+#   hooks:
+#   - id: pydocstyle
+#     additional_dependencies: [toml]
+#     exclude: "tests/"
+
+- repo: https://github.com/asottile/blacken-docs
+  rev: 1.14.0
+  hooks:
+  -   id: blacken-docs
+      additional_dependencies: [black==23.11.0]
