--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "PySide6-Essentials==6.6.0",
+    "build==1.0.3",
+    "twine==4.0.2",
+    "pyaedt",
+    "PySide6-Essentials",
     "pyqtgraph",
     "qdarkstyle",
     "flask",
-    "pyaedt",
     "pydantic",
 ]
 
@@ -46,19 +48,19 @@ doc = [
     "enum-tools[sphinx]==0.11.0",
     "sphinx-autoapi==3.0.0",
     "sphinx-autobuild==2021.3.14",
-    "sphinx-autodoc-typehints==1.25.1",
-    "sphinx-gallery==0.14.0",
+    "sphinx-autodoc-typehints==1.25.2",
+    "sphinx-gallery==0.15.0",
     "sphinx-notfound-page==1.0.0",
-    "nbsphinx==0.9.2",
+    "nbsphinx==0.9.3",
 ]
 
 [tool.flit.module]
 name = "ansys.aedt.toolkits.common"
 
 [project.urls]
-Source = "https://github.com/ansys/pyaedt-toolkits-template.git"
-Tracker = "https://github.com/ansys/pyaedt-toolkits-template/issues"
-Homepage = "https://github.com/ansys/pyaedt-toolkits-template.git"
+Source = "https://github.com/ansys/pyaedt-toolkits-common.git"
+Tracker = "https://github.com/ansys/pyaedt-toolkits-common/issues"
+Homepage = "https://github.com/ansys/pyaedt-toolkits-common.git"
 
 
 [tool.black]
