--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 markers =
     common: mark a test as common functionality
+    aedt: mark a test as aedt functionality
+    edb: mark a test as edb functionality
