--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 exclude: |
     (?x)(
-        src/ansys/aedt/toolkits/common/ui/.* |
+        src/ansys/aedt/toolkits/common/ui/utils/ui_templates/.* |
         tests/input_data/.* |
-        examples/input_files/.*
+        examples/.*
     )
 
 repos:
