--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -103,13 +103,13 @@ jobs:
         timeout-minutes: 5
         run: |
           .\.venv\Scripts\Activate.ps1
-          pytest -v -m aedt_common --cov
+          pytest -v -m backend\tests_common_api --cov
 
-      - name: AEDT Test
-        timeout-minutes: 5
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          pytest -v -m aedt --cov --cov-append
+#      - name: AEDT Test
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          pytest -v -m aedt --cov --cov-append
 
       - name: "Combine coverage files"
         run: |
