--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -104,6 +104,13 @@ jobs:
         run: |
           .\.venv\Scripts\Activate.ps1
           pytest -v -m backend\tests_common_api --cov
+          echo "Current Directory: $(pwd)"
+
+      - name: Debug Info
+        run: |
+          echo "Current Directory: $(pwd)"
+          echo "Contents of Current Directory: $(ls -la)"
+    # Add more debugging information as needed
 
 #      - name: AEDT Test
 #        timeout-minutes: 5
