--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 exclude: |
     (?x)(
         src/ansys/aedt/toolkits/common/ui/utils/ui_templates/.* |
-        tests/input_data/.* |
+        tests/.* |
         examples/.*
     )
 
