--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -99,17 +99,29 @@ jobs:
         env:
           ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
 
-      - name: Test AEDT common
-        timeout-minutes: 5
+      - name: Test Common API
+        timeout-minutes: 2
         run: |
           .\.venv\Scripts\Activate.ps1
           pytest -v -m backend\tests_common_api --cov
 
-#      - name: AEDT Test
+#      - name: Test AEDT API
 #        timeout-minutes: 5
 #        run: |
 #          .\.venv\Scripts\Activate.ps1
-#          pytest -v -m aedt --cov --cov-append
+#          pytest -v -m backend\tests_aedt_api --cov --cov-append
+#
+#      - name: Test EDB API
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          pytest -v -m backend\tests_edb_api --cov --cov-append
+#
+#      - name: Test REST API
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          pytest -v -m backend\tests_rest_api --cov --cov-append
 
       - name: "Combine coverage files"
         run: |
