--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -26,3 +26,10 @@ Vocab = ANSYS
 
 # Apply the following styles
 BasedOnStyles = Vale, Google
+
+
+# Removing Google-specific rule - Not applicable under some circumstances
+Google.Colons = NO
+
+# Ignore content within inline roles
+TokenIgnores = (:.*:`.*`)|(<.*>)
