--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = -v
-
 markers =
-    common: mark tests related to the common api
+    tests_common_api: mark tests related to the common api
+    tests_aedt_api: mark tests related to the aedt api
+    tests_edb_api: mark tests related to the edb api
+    tests_rest_api: mark tests related to the rest api
