--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -105,23 +105,23 @@ jobs:
           .\.venv\Scripts\Activate.ps1
           pytest -v -m tests_common_api --cov
 
-#      - name: Test AEDT API
-#        timeout-minutes: 5
-#        run: |
-#          .\.venv\Scripts\Activate.ps1
-#          pytest -v -m backend\tests_aedt_api --cov --cov-append
-#
-#      - name: Test EDB API
-#        timeout-minutes: 5
-#        run: |
-#          .\.venv\Scripts\Activate.ps1
-#          pytest -v -m backend\tests_edb_api --cov --cov-append
-#
-#      - name: Test REST API
-#        timeout-minutes: 5
-#        run: |
-#          .\.venv\Scripts\Activate.ps1
-#          pytest -v -m backend\tests_rest_api --cov --cov-append
+      - name: Test AEDT API
+        timeout-minutes: 5
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          pytest -v -m tests_aedt_api --cov --cov-append
+
+      - name: Test EDB API
+        timeout-minutes: 5
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          pytest -v -m tests_edb_api --cov --cov-append
+
+      - name: Test REST API
+        timeout-minutes: 5
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          pytest -v -m tests_rest_api --cov --cov-append
 
       - name: "Combine coverage files"
         run: |
