REFACT: combined code review
REFACT: tests conftests, fixtures and finalizer

Factorizes and cleans up the way tests are run. The failed tests
are still written in a file through the logger but the file is now
common to the whole test session.

FEAT: add repr magic method to properties

REFACT: clean up and minor changes

REFACT: clean up and leverage error msg enum

FEAT: add poll url method

REFACT: clean up and minor changes

REFACT: clean up and minor changes

FIX: add forgotten import

CI: add tests step

MISC: add markers to pyproject.toml

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -96,32 +96,31 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade build wheel
           pip install .[tests]
-        env:
-          ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
 
-      - name: Test Common API
-        timeout-minutes: 2
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          pytest -v -m tests_common_api --cov
-
-      - name: Test AEDT API
+      - name: Test AEDT Common API
         timeout-minutes: 5
         run: |
           .\.venv\Scripts\Activate.ps1
-          pytest -v -m tests_aedt_api --cov --cov-append
+          pytest -v -m aedt_common_api --cov
+
+      - name: Test Common API
+        timeout-minutes: 5
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          pytest -v -m common_api --cov --cov-append
 
       - name: Test EDB API
         timeout-minutes: 5
         run: |
           .\.venv\Scripts\Activate.ps1
-          pytest -v -m tests_edb_api --cov --cov-append
+          pytest -v -m edb_api --cov --cov-append
 
       - name: Test REST API
         timeout-minutes: 5
         run: |
           .\.venv\Scripts\Activate.ps1
-          pytest -v -m tests_rest_api --cov --cov-append
+
+          pytest -v -m rest_api --cov --cov-append
 
       - name: "Combine coverage files"
         run: |
