--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -96,20 +96,30 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade build wheel
           pip install .[tests]
-        env:
-          ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
 
-      - name: Test AEDT common
+      - name: Test AEDT Common API
         timeout-minutes: 5
         run: |
           .\.venv\Scripts\Activate.ps1
-          pytest -v -m common --cov
+          pytest -v -m aedt_common_api --cov
 
-#      - name: AEDT Test
-#        timeout-minutes: 5
-#        run: |
-#          .\.venv\Scripts\Activate.ps1
-#          pytest -v -m aedt --cov --cov-append
+      - name: Test Common API
+        timeout-minutes: 5
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          pytest -v -m common_api --cov --cov-append
+
+      - name: Test EDB API
+        timeout-minutes: 5
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          pytest -v -m edb_api --cov --cov-append
+
+      - name: Test REST API
+        timeout-minutes: 5
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          pytest -v -m rest_api --cov --cov-append
 
       - name: "Combine coverage files"
         run: |
