--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -59,7 +59,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ windows-latest, ubuntu-latest ]
-        python-version: [ '3.8', '3.10' ]
+        python-version: [ '3.10' ]
     runs-on: ${{ matrix.os }}
     needs: [ code-style ]
     steps:
@@ -73,7 +73,7 @@ jobs:
     name: "Windows Tests AEDT"
     strategy:
       matrix:
-        python-version: [ '3.8', '3.10' ]
+        python-version: [ '3.10' ]
       fail-fast: false
     runs-on: [self-hosted, pyaedt, toolkits, Windows]
     needs: [smoke-tests]
