--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -84,11 +84,11 @@ jobs:
           cd doc
           .\make.bat html
 
-      - name: Build the documentation (PDF)
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          cd doc
-          .\make.bat pdf
+#      - name: Build the documentation (PDF)
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          cd doc
+#          .\make.bat pdf
 
       - name: Upload HTML Documentation artifact
         uses: actions/upload-artifact@v4
@@ -97,12 +97,12 @@ jobs:
           path: doc/_build/html
           retention-days: 1
 
-      - name: Upload PDF Documentation artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: documentation-pdf
-          path: doc/_build/latex/*.pdf
-          retention-days: 7
+#      - name: Upload PDF Documentation artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: documentation-pdf
+#          path: doc/_build/latex/*.pdf
+#          retention-days: 7
 
   smoke-tests:
     name: "Build and Smoke tests"
