--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,8 @@ doc = [
     "nbsphinx==0.9.3",
     "sphinx_design",
     "jupytext",
+    "ipython==8.16.1",
+    "jupyterlab==4.0.6",
 ]
 
 [tool.flit.module]
