Improve UI flow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ tests = [
     "flask",
 ]
 doc = [
+    "pyaedt[all]",
     "ansys-sphinx-theme==0.14.0",
     "numpydoc==1.6.0",
     "recommonmark==0.7.1",
