DOC: leverage pypandoc-binary
Note: the idea is to be able to work with new self hosted runners
without having to install pandoc manually everytime.
Here, we leverage pypandoc-binary to use pandoc without installing
it before running the documentation. A sphinx even hook is
used to update the PATH environment variable if needed.

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -67,11 +67,12 @@ jobs:
           python -m pip install wheel setuptools -U
           python -c "import sys; print(sys.executable)"
 
-      - name: Install common toolkit with doc dependencies
+      - name: Install common toolkit with doc and ci dependencies
         run: |
           . .venv\Scripts\Activate.ps1
           pip install .
           pip install .[doc]
+          pip install .[ci]
 
       - name: Retrieve common toolkit version
         run: |
