CI: fix plot issues using vtk-osmesa

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -67,12 +67,21 @@ jobs:
           python -m pip install wheel setuptools -U
           python -c "import sys; print(sys.executable)"
 
-      - name: Install common toolkit with doc and ci dependencies
+      - name: Install common toolkit with doc dependencies
         run: |
           . .venv\Scripts\Activate.ps1
           pip install .
           pip install .[doc]
-          pip install .[ci]
+
+      - name: Uninstall conflicting CI packages
+        run: |
+          .venv\Scripts\Activate.ps1
+          pip uninstall vtk pypandoc -y
+
+      - name: Install CI related dependencies
+        run: |
+          .venv\Scripts\Activate.ps1
+          pip install --extra-index-url https://wheels.vtk.org .[ci]
 
       - name: Retrieve common toolkit version
         run: |
