--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,14 +26,14 @@ classifiers = [
 dependencies = [
     "build==1.0.3",
     "twine==5.0.0",
-    "pyaedt",
-    "pyedb",
+    "pyaedt==0.8.1",
+    "pyedb==0.4.0",
     "pydantic",
 ]
 
 [project.optional-dependencies]
 all = [
-    "pyaedt[all]",
+    "pyaedt[all]==0.8.1",
     "flask",
     "PySide6-Essentials",
     "pyqtgraph",
@@ -46,7 +46,7 @@ tests = [
     "flask",
 ]
 doc = [
-    "pyaedt[all]",
+    "pyaedt[all]==0.8.1",
     "PySide6-Essentials",
     "ansys-sphinx-theme==0.14.0",
     "numpydoc==1.6.0",
@@ -63,8 +63,7 @@ doc = [
     "jupytext",
     "ipython==8.22.1",
     "jupyterlab==4.0.6",
-    "pypandoc",
-    "vtk==9.3.0",
+    "pypandoc"
 ]
 ci = [
     "pypandoc-binary==1.13",
