CI: Add release to public pypi
Note: Remove release to private pypi

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -283,20 +283,12 @@ jobs:
     needs: build-library
     runs-on: ubuntu-latest
     steps:
-
-      - name: "Release to the private PyPI"
-        uses: ansys/actions/release-pypi-private@v5
+      - name: "Release to the public PyPI repository"
+        uses: ansys/actions/release-pypi-public@v5
         with:
           library-name: ${{ env.LIBRARY_NAME }}
           twine-username: "__token__"
-          twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
-
-      #      - name: "Release to the public PyPI repository"
-      #        uses: ansys/actions/release-pypi-public@v4
-      #        with:
-      #          library-name: ${{ env.LIBRARY_NAME }}
-      #          twine-username: "__token__"
-      #          twine-token: ${{ secrets.PYPI_TOKEN }}
+          twine-token: ${{ secrets.PYPI_TOKEN }}
 
       - name: "Release to GitHub"
         uses: ansys/actions/release-github@v5
