--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -101,6 +101,12 @@ jobs:
           cd doc
           .\make.bat pdf
 
+      - name: Add assets to HTML docs
+        run: |
+          zip -r documentation-html.zip .\doc\_build\html
+          mv documentation-html.zip .\doc\_build\html\_static\assets\download\
+          cp doc/_build/latex/ansys-aedt-toolkits-common.pdf .\doc\_build\html\_static\assets\download\
+
       - name: Upload HTML Documentation artifact
         uses: actions/upload-artifact@v4
         with:
