--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ tests = [
 ]
 doc = [
     "pyaedt[all]>=0.8.0,<0.9",
+    "recommonmark>=0.7.0,<0.8",
     "PySide6-Essentials",
     "ansys-sphinx-theme>=0.10.0,<0.15",
     "numpydoc>=1.5.0,<1.7",
