--- a/examples/toolkit/pyaedt_toolkit/ui/frontend_properties.toml
+++ b/examples/toolkit/pyaedt_toolkit/ui/frontend_properties.toml
@@ -10,7 +10,7 @@ version= "v0.0.1"
 copyright= "By: slopez"
 year= 2023
 theme= "ansys_dark.json"
-high_resolution= true
+high_resolution= false
 
 [[defaults.add_left_menus]]
 btn_icon= "icon_home.svg"
