--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,9 +41,10 @@ all = [
     "pyvistaqt",
 ]
 tests = [
+    "pyaedt[all]>=0.8.0,<0.9",
+    "flask",
     "pytest>=7.4.0,<8.2",
     "pytest-cov>=4.0.0,<5.1",
-    "flask",
 ]
 doc = [
     "pyaedt[all]>=0.8.0,<0.9",
