DOC: Add missing changes

--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -23,10 +23,9 @@ Packages = Google
 Vocab = ANSYS
 
 [*.{md,rst}]
-
 # Apply the following styles
 BasedOnStyles = Vale, Google
-
+Vale.Terms = NO
 
 # Removing Google-specific rule - Not applicable under some circumstances
 Google.Colons = NO
