--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -45,6 +45,7 @@ jobs:
       - uses: ansys/actions/doc-style@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          vale-version: "3.4.1"
 
   doc-build:
     name: "Build documentation"
