--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -86,7 +86,8 @@ jobs:
       - name: Install CI related dependencies
         run: |
           .venv\Scripts\Activate.ps1
-          pip install --extra-index-url https://wheels.vtk.org .[ci]
+          pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.2.20230527.dev0
+          pip install "pypandoc-binary>=1.10.0,<1.14"
 
       - name: Retrieve common toolkit version
         run: |
