CHORE: Update docs' CI and dependencies

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -19,9 +19,7 @@ env:
   LIBRARY_NAME: 'ansys-aedt-toolkits-common'
   LIBRARY_NAMESPACE: 'ansys.aedt.toolkits.common'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
-  MEILISEARCH_API_KEY: ${{ secrets.MEILISEARCH_API_KEY }}
-  MEILISEARCH_HOST_URL: ${{ vars.MEILISEARCH_HOST_URL }}
-  MEILISEARCH_PUBLIC_API_KEY: ${{ secrets.MEILISEARCH_PUBLIC_API_KEY }}
+  ON_CI: True
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -53,78 +51,14 @@ jobs:
     needs: [ doc-style ]
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v4
-
-      - name: "Set up Python"
-        uses: ansys/actions/_setup-python@main
+      - name: Build documentation
+        uses: ansys/actions/doc-build@v8
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
-          use-cache: false
-
-      - name: 'Create virtual env'
-        run: |
-          python -m venv .venv
-
-      - name: "Update pip"
-        run: |
-          . .venv\Scripts\Activate.ps1
-          python -m pip install pip -U
-          python -m pip install wheel setuptools -U
-          python -c "import sys; print(sys.executable)"
-
-      - name: Install common toolkit with doc dependencies
-        run: |
-          . .venv\Scripts\Activate.ps1
-          pip install .
-          pip install .[doc]
-
-      - name: Uninstall conflicting CI packages
-        run: |
-          .venv\Scripts\Activate.ps1
-          pip uninstall vtk pypandoc -y
-
-      - name: Install CI related dependencies
-        run: |
-          .venv\Scripts\Activate.ps1
-          pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.2.20230527.dev0
-          pip install "pypandoc-binary>=1.10.0,<1.14"
-
-      - name: Retrieve common toolkit version
-        run: |
-          . .venv\Scripts\Activate.ps1
-          echo "Common Toolkit version is: $(python -c "from ansys.aedt.toolkits.common import __version__; print(); print(__version__)")"
-
-      - name: Build the documentation (HTML)
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          cd doc
-          .\make.bat html
-
-      - name: Build the documentation (PDF)
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          cd doc
-          .\make.bat pdf
-
-      - name: Add assets to HTML docs
-        run: |
-          zip -r documentation-html.zip .\doc\_build\html
-          mv documentation-html.zip .\doc\_build\html\_static\assets\download\
-          cp doc/_build/latex/ansys-aedt-toolkits-common.pdf .\doc\_build\html\_static\assets\download\
-
-      - name: Upload HTML Documentation artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: documentation-html
-          path: doc/_build/html
-          retention-days: 1
-
-      - name: Upload PDF Documentation artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: documentation-pdf
-          path: doc/_build/latex/*.pdf
-          retention-days: 7
+          check-links: false
+          use-python-cache: false
+          add-pdf-html-docs-as-assets: true
+          check-links: true
 
   smoke-tests:
     name: "Build and Smoke tests"
