--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "build==1.2.2.post1",
     "twine==5.1.1",
     "pyaedt>=0.10.0,<0.12",
-    "pydantic",
+    "pydantic>=2.0,<2.9",
     "tomli; python_version < '3.12'",
 ]
 
