--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pyaedt>=0.12.0,<0.14",
     "pydantic>=2.0,<2.9",
     "tomli; python_version < '3.12'",
+    "attrs<24.3.0"
 ]
 
 [project.optional-dependencies]
